# floci-moto-spike

./: .gitignore  README.md  pyproject.toml  requirements-api.txt  server.py
ci/: run_ci.sh
deploy/: deploy.sh
src/floci_api/: __init__.py  app.py  cache.py  errors.py  middleware.py  routes.py
src/floci_cli/: cli.py  plan_generator.py  scenarios.py  simulator.py
src/floci_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_integration.py  test_plan_generator.py  test_simulator.py
